--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -21,6 +21,11 @@
             </li>
             <br>
         </div>
+
+        <div th:if="${message}" class="alert alert-success">
+            <p th:text="${message}">Account has been created. Please log in!</p>
+        </div>
+
         <form name="f" th:action="@{/login}" method="post">
 
             <div th:if="${param.error}" class="alert alert-danger" role="alert">
