--- a/src/main/resources/templates/add_user.html
+++ b/src/main/resources/templates/add_user.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head id="headId">
     <meta charset="UTF-8">
     <title>Contractor</title>
@@ -46,7 +47,7 @@
                         </div>
                     </div>
 
-                    <div class="form-group row">
+                    <div sec:authorize="hasRole('ROLE_ADMIN')" class="form-group row">
                         <label for="selectCar" class="col-sm-2 col-form-label">Role</label>
                         <div class="col-sm-10">
                             <select id="selectCar" class="form-control" th:field="*{userRole}"
