--- a/src/main/resources/templates/cars.html
+++ b/src/main/resources/templates/cars.html
@@ -56,13 +56,13 @@
         </ul>
     </nav>
 
-    <div class="col text-center"><a id="addCarId" class="btn btn-light btn-sm" role="button" aria-pressed="true">Add New
+    <div sec:authorize="hasRole('ROLE_ADMIN')" class="col text-center"><a id="addCarId" class="btn btn-light btn-sm" role="button" aria-pressed="true">Add New
         Car</a></div>
 
 </div>
 <div align="center">
     <footer id="footerId">this is a footer</footer>
-
+</div>
 
 <script th:inline="javascript">
     var userRoles = /*[[${#authentication.authorities}]]*/ "Guest";
