--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -9,15 +9,31 @@
 
 <div th:replace="~{fragments/menu :: menuFragment}"/>
 <p>&nbsp;</p>
-<p>&nbsp;</p>
-<H2 class="text-center" th:utext="'Hello ' + ${user.userName} + '!'"></H2>
-<br>
-<H2 align="center">Welcome to Car Rental Application</H2>
 <p><br></p>
-<p align="center">This is demo version.</p>
-<div align="center">
+<div class="container">
+    <div class="row">
+        <div class="col-md-2">
+        </div>
+        <div class="col-md-8">
+            <H2 class="text-center" th:utext="'Hello ' + ${user.userName} + '!'"></H2>
+            <H2 align="center">Welcome to Car Rental Application</H2>
+            <br><br>
+            <h5 align="center">This is working version of application which is still under construction!</h5>
+            <p><br></p>
+            <ui>
+                <p><b>Used technologies: </b>Java 17, Spring Boot, Maven, H2 database, Flyway, Hibernate, Thymeleaf, SpringSecurity, Lombok, JavaScript (AJAX), Spock (Groovy)</p>
+                <p><b>Description: </b>Web application car rental management</p>
+                <p><b>Sources: </b><a href="https://github.com/lukaszse/car-rental">github.com/lukaszse/car-rental</a></p>
+                <i class="fab fa-github"></i>
+            </ui>
+        </div>
+
+        <div class="col-md-2">
+        </div>
+    </div>
 </div>
-<div align="center">
+
+<div class="text-center">
 <footer id="footerId">this is a footer</footer>
 </div>
 </body>
