--- a/src/main/resources/templates/fragments/menu.html
+++ b/src/main/resources/templates/fragments/menu.html
@@ -41,7 +41,7 @@
                                    th:with="reservations=${T(org.lukaszse.carRental.util.Mappings).USER_RESERVATIONS}">Reservations</a>
                             </li>
 
-                            <li sec:authorize="hasAnyRole('ROLE_USER', 'ROLE_GUEST')" class="nav-item">
+                            <li sec:authorize="!hasRole('ROLE_ADMIN')" class="nav-item">
                                 <a class="nav-link"
                                    th:href="${message}"
                                    th:with="message=${T(org.lukaszse.carRental.util.Mappings).SEND_MESSAGE}">Send Message</a>
