add role manager, add alert when car/reservation not found

--- a/src/main/resources/templates/cars.html
+++ b/src/main/resources/templates/cars.html
@@ -156,6 +156,10 @@
             tbody.appendChild(row);
         }
         document.getElementById("tbody").replaceWith(tbody);
+
+        if(array.length === 0) {
+            alert("Couldn't find any car for the given criteria.")
+        }
     }
 
     function addBookButton(carId, dateFrom, dateTo, row) {
