--- a/src/main/resources/templates/reservations.html
+++ b/src/main/resources/templates/reservations.html
@@ -82,7 +82,6 @@
             } else {
                 buildTable(response.content);
                 pageLinks(response, pageNumber);
-
             }
         });
     }
@@ -90,6 +89,7 @@
     function buildTable(array) {
         let tbody = document.createElement("tbody");
         tbody.id = "tbody";
+
 
         for (const element of array) {
             var row = document.createElement("tr");
@@ -105,6 +105,10 @@
             tbody.appendChild(row);
         }
         document.getElementById("tbody").replaceWith(tbody);
+
+        if(array.length === 0) {
+            alert("Couldn't find any reservation for the given criteria.")
+        }
     }
 
     function addTextCell(cellContent, row) {
