Documentation + typos fix

--- a/src/main/resources/templates/add_user.html
+++ b/src/main/resources/templates/add_user.html
@@ -25,7 +25,7 @@
                     <p>&nbsp<br></p>
 
                     <div class="form-group row">
-                        <label for="inputUserName" class="col-sm-2 col-form-label">User name</label>
+                        <label for="inputUserName" class="col-sm-2 col-form-label">Login</label>
                         <div class="col-sm-10">
                             <input type="text" class="form-control" id="inputUserName" th:field="*{userName}" th:errorclass="'form-control is-invalid'">
                         </div>
