--- a/src/main/resources/templates/car.html
+++ b/src/main/resources/templates/car.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org"
+                xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head id="headId"></head>
 <body class="p-3 mb-2 bg-dark text-white">
 <div th:replace="~{fragments/menu :: menuFragment}"/>
@@ -28,7 +29,7 @@
                 </td>
             </tr>
     </table>
-    <a id="editCarId" class="btn btn-light btn-sm" role="button" aria-pressed="true">Edit</a>
+    <a sec:authorize="hasAnyRole('ROLE_ADMIN', 'ROLE_MANAGER')" id="editCarId" class="btn btn-light btn-sm" role="button" aria-pressed="true">Edit</a>
     <a id="deleteCarId" class="btn btn-light btn-sm" role="button" aria-pressed="true">Delete</a>
     <a href="javascript:genPDF()" class="btn btn-light btn-sm" role="button" aria-pressed="true">Generate PDF</a>
 </div>
