--- a/src/main/resources/templates/send_message.html
+++ b/src/main/resources/templates/send_message.html
@@ -61,7 +61,7 @@
                         </div>
                     </div>
 
-                    <div sec:authorize="!isAuthenticated()" class="row">
+                    <div class="row">
                         <div class="col-2">
                             <label>Verify</label>
                         </div>
