--- a/src/main/resources/templates/add_car.html
+++ b/src/main/resources/templates/add_car.html
@@ -31,7 +31,7 @@
                     </div>
 
                     <div class="form-group row">
-                        <label for="inputRegistrationNo" class="col-sm-2 col-form-label">Registration number</label>
+                        <label for="inputRegistrationNo" class="col-sm-2 col-form-label">Registration plate</label>
                         <div class="col-sm-10">
                             <input type="text" class="form-control" id="inputRegistrationNo" th:field="*{registrationNo}"
                                    th:errorclass="'form-control is-invalid'">
@@ -64,7 +64,7 @@
 
 
                     <div class="form-group row">
-                        <label for="inputType" class="col-sm-2 col-form-label">type</label>
+                        <label for="inputType" class="col-sm-2 col-form-label">Car type</label>
                         <div class="col-sm-10">
                             <input type="text" class="form-control" id="inputType" th:field="*{type}"
                                    th:errorclass="'form-control is-invalid'">
@@ -88,7 +88,7 @@
                     </div>
 
                     <div class="form-group row">
-                        <label for="inputDescription" class="col-sm-2 col-form-label">Desrciption</label>
+                        <label for="inputDescription" class="col-sm-2 col-form-label">Description</label>
                         <div class="col-sm-10">
                             <input type="text" class="form-control" id="inputDescription" th:field="*{description}"
                                    th:errorclass="'form-control is-invalid'">
