--- a/src/main/resources/templates/user_reservations.html
+++ b/src/main/resources/templates/user_reservations.html
@@ -8,7 +8,7 @@
 
 <div class="container-md" align="center">
     <p>&nbsp;</p>
-    <h5>List of your:</h5>
+    <h5>List of your reservations:</h5>
     <p>&nbsp;</p>
     <table class="table table-striped table-dark" border="2" cellpadding="10">
         <thead>
@@ -79,7 +79,7 @@
             addTextCell(element.dateTo, row);
             addTextCell(currencyFormatPLN(element.totalCost), row);
             addLinkCell('View Details', `reservation?id=${element.id}`, row);
-            addLinkCell('Delete', `delete_reservation?id=${element.id}`, row);
+            addLinkCell('Cancel Reservation', `delete_reservation?id=${element.id}`, row);
             tbody.appendChild(row);
         }
         document.getElementById("tbody").replaceWith(tbody);
